# Oxford-Mindmap

./: .gitignore  README.md
client/: .gitignore  App.tsx  README.md  app.config.js  app.json  constants.tsx  contexts.ts  package-lock.json  package.json  portal.tsx  routes.tsx
client/components/: StoryElements.tsx  StoryFloat.tsx  StoryList.tsx  StoryListItem.tsx  TutorialPopup.tsx
client/constants/: Colors.ts  Contexts.ts
client/navigation/: BottomTabNavigator.tsx
client/screens/: Map.tsx  Modal.tsx  OpenForm.tsx  Settings.tsx  StoryList.tsx  TabOneScreen.tsx  TabTwoScreen.tsx
client3/: App.tsx  README.md  app.config.js  app.json  classes.ts  constants.tsx  contexts.ts  package-lock.json  package.json  routes.tsx
client3/components/: StoryFloat.tsx  StoryListItem.tsx
client3/screens/: Map.tsx  Modal.tsx  Settings.tsx  StoryList.tsx
server/: README.md  app.db  config.py  pyproject.toml  run.py  run_debug.py  secret_config.py
server/server/: __init__.py  admin_views.py  forms.py  models.py  todo.txt  views.py
server/server/extensions/: forms.py
server/server/templates/admin/: home.html
