[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Edd Salkield <edd@salkield.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-Admin = "^1.5.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
server = "run:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
